# StoryLanguage

./: .gitignore  README.md  compiler.py  directions.txt  errors.py  main.py  pyproject.toml
compiler/: lexer.py  parser.py  tokens.py
